[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/anemometer.gd" type="Script" id=1]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=2]
[ext_resource path="res://assets/fireArrow.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/menu/gameover.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/menu/restart.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/menu/restart_clicked.png" type="Texture" id=6]
[ext_resource path="res://scripts/ButtonScripts.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.156863, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.156863, 1, 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 595.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 974.0
margin_bottom = 15.0

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 870.0
margin_bottom = 15.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 874.0
margin_right = 974.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
color = Color( 0.270588, 0.270588, 0.270588, 1 )

[node name="Score" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[right]1234567890[/right]"
text = "1234567890"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 974.0
margin_bottom = 531.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 535.0
margin_right = 974.0
margin_bottom = 570.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 35.0

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
size_flags_horizontal = 0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.529785
margin_bottom = 0.529785
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]Health[/center]"
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 15 )
size_flags_horizontal = 0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/WaterBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.529785
margin_bottom = 0.529785
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]Water[/center]"
text = "Water"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 857.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="WindSpeed" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 861.0
margin_right = 921.0
margin_bottom = 35.0
rect_min_size = Vector2( 60, 15 )
bbcode_text = "45 MPH"
text = "45 MPH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 925.0
margin_right = 935.0
margin_bottom = 35.0
rect_min_size = Vector2( 10, 0 )
custom_styles/separator = SubResource( 1 )

[node name="Anemometer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 939.0
margin_right = 974.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="NewFireArrow" type="Node2D" parent="CenterContainer/Control"]
visible = false

[node name="Sprite" type="Sprite" parent="CenterContainer/Control/NewFireArrow"]
position = Vector2( 0, -50 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/Control/NewFireArrow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -90.0
margin_right = 68.0
margin_bottom = -76.0
text = "A spark started a fire!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameover" type="Sprite" parent="."]
visible = false
position = Vector2( 511.302, 191.614 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="gameover"]
margin_left = -379.0
margin_top = 268.0
margin_right = 386.0
margin_bottom = 380.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="gameover"]
margin_left = -350.19
margin_top = 292.441
margin_right = -101.19
margin_bottom = 332.441
rect_scale = Vector2( 4, 4 )
text = "You scored:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="gameover"]
visible = false
margin_left = -238.295
margin_top = 398.101
margin_right = 241.705
margin_bottom = 668.101
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="gameover/TextureButton" to="gameover/TextureButton" method="switch_scene" binds= [ "res://Scenes/main_title.tscn" ]]
